--- a/index.html
+++ b/index.html
@@ -107,33 +107,45 @@
 
         <section class="eventPage">
 
-            <h1 class="eventName">Архіпелаг-О</h1>
-            <header>
-                <nav>
-                    <ul class="headertMenu">
+            <div class="headerEventPage">
+                <section class="promoInfo">
+                    <h1 class="eventName">Архіпелаг-О</h1>
+                    <ul class="headerLinks">
                         <li> <a href="">Сайт</a> </li>
                         <li> <a href="">Мапа</a> </li>
                         <li> <a href="">Блабла</a> </li>
                     </ul>
-                    <section class="shortInfo">
-                        <p>Дата</p>
-                        <p>Місце</p>
-                        <p>Організатор</p>
-                        <p>Вартість</p>
-                        <p>Реєстрація</p>
-                    </article>
-                </nav>
-
+                    <section class="headerInfo">
+                        <p><span>Дата:</span> 01-03 червня</p>
+                        <p><span>Місце:</span>Дніпро</p>
+                        <p><span>Організатор:</span> Архіпелаг-0</p>
+                        <p><span>Вартість:</span> 500 грн</p>
+                        <p><span>Реєстрація:</span> <a href="#">по посиланню</a> </p>
+                    </section>
+                </section>
                 <section class="promoImg">
                     <img src="img/eventPromo/arhipelag.jpg" alt="">
                 </section>
-            </header>
-            <main>
-                <article>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi architecto similique magnam voluptatibus quo veritatis, molestias perferendis quis quidem totam earum fugit molestiae animi ea numquam, qui, quos officiis dicta explicabo dolorum tenetur delectus eum assumenda laborum! Deleniti autem, esse praesentium ipsam expedita minima recusandae debitis quo vitae nam excepturi? </p>
-                </article>
+            </div>
 
-            </main>
+            <div class="generalEventInfo">
+                <article>
+                    <h4>Опис події</h4>
+                    <p>Ориентирование на байдарках, являясь не самым молодым направлением в нашем спорте, развивается в мире не самыми быстрыми темпами из-за частого отсутствия специфической местности для проведения соревнований, водные просторы которой должны быть также интересны для спортсмена, как и простой лес. </p>
+                    <br>
+                    <h4>Регламент</h4>
+                    <p> Но мы с удовольствием отмечаем расширение географии проводимых соревнований, а также активное использование ориентирования на байдарках как элемента мультигонок. </p>
+                </article>
+                <section class="socialSection">
+                    <ul class="socialLinks">
+                        <li><a href="">Facebook</a> </li>
+                        <li><a href="">Instagram</a></li>
+                        <li><a href="">Messanger</a></li>
+                        <li><a href="">Telegram</a></li>
+                        <li><a href="">Viber</a></li>
+                    </ul>
+                </section>
+            </div>
             
 
         </section>
@@ -149,7 +161,6 @@
           
 </div> <!--End container-->
 
-<!-- <script src="script.js"></script> -->
 </body>
 </html>
 
