--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
             <div class="headerEventPage">
                 <section class="promoInfo">
                     <h1 class="eventName">Архіпелаг-О</h1>
-                    <ul class="headerLinks">
+                    <!-- <ul class="headerLinks">
                         <li> <a href="">Сайт</a> </li>
                         <li> <a href="">Мапа</a> </li>
                         <li> <a href="">Блабла</a> </li>
-                    </ul>
+                    </ul> -->
                     <section class="headerInfo">
                         <p><span>Дата:</span> 01-03 червня</p>
                         <p><span>Місце:</span>Дніпро</p>
