--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
 
     <header class="header">  
-            <a href="#" class="logo">
+            <a href="https://sportcalendar.github.io/" class="logo">
                 <img src="img/SC_logo_vert.svg"  alt="">
             </a>
             
@@ -109,20 +109,19 @@
 
             <div class="headerEventPage">
                 <section class="promoInfo">
-                    <h1 class="eventName">Архіпелаг-О</h1>
-                    <!-- <ul class="headerLinks">
-                        <li> <a href="">Сайт</a> </li>
-                        <li> <a href="">Мапа</a> </li>
-                        <li> <a href="">Блабла</a> </li>
-                    </ul> -->
+                    <h1 class="eventName">Архіпелаг-О <br>
+                        <span>Фестиваль водного орієнтування</span>
+                    </h1>
+                    
                     <section class="headerInfo">
                         <p><span>Дата:</span> 01-03 червня</p>
-                        <p><span>Місце:</span>Дніпро</p>
-                        <p><span>Організатор:</span> Архіпелаг-0</p>
+                        <p><span>Місце:</span> <a href=""> Дніпро, Самарські Плавні</a></p>
+                        <p><span>Організатор:</span> <a href="http://life-n-action.com/">Life-n-Action.com</a> </p>
                         <p><span>Вартість:</span> 500 грн</p>
-                        <p><span>Реєстрація:</span> <a href="#">по посиланню</a> </p>
+                        <p class="registration"><a href="#" class="linkButton">Реєстрація</a></p>
                     </section>
                 </section>
+
                 <section class="promoImg">
                     <img src="img/eventPromo/arhipelag.jpg" alt="">
                 </section>
@@ -133,8 +132,9 @@
                     <h4>Опис події</h4>
                     <p>Ориентирование на байдарках, являясь не самым молодым направлением в нашем спорте, развивается в мире не самыми быстрыми темпами из-за частого отсутствия специфической местности для проведения соревнований, водные просторы которой должны быть также интересны для спортсмена, как и простой лес. </p>
                     <br>
+                    <br>
                     <h4>Регламент</h4>
-                    <p> Но мы с удовольствием отмечаем расширение географии проводимых соревнований, а также активное использование ориентирования на байдарках как элемента мультигонок. </p>
+                    <p> Арена старт/фініш нічних змагань (1.06.2018) і дистанції по вибору (3.06.2018) розташована безпосередньо у центрі змагань; арена класичної дистанції (2.06.2018) знаходиться в 400м на захід від центру змагань по асфальтовій дорозі. <a href="https://www.facebook.com/events/2091143327785362/permalink/2091150064451355/" class="detailEvent">Детальніше >></a> </p>
                 </article>
                 <section class="socialSection">
                     <ul class="socialLinks">
