--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </a>
             
             <div class="headerMenu">
-                <a href="#" class="social-item">Організаторам</a>
-                <a href="#" class="social-item">Учасникам</a>
+                <a href="#" class="social-item">ОРГАНІЗАТОРАМ</a>
+                <a href="#" class="social-item">УЧАСНИКАМ</a>
             </div>
             
             <div class="headerSocialMenu">
