--- a/index.html
+++ b/index.html
@@ -31,18 +31,13 @@
     </header>
  
     <header class="headerMob">
-        <div class="headerSocialMenu">
-            <a href="#" class="social-item">Fb</a>
-            <a href="#" class="social-item">Tlg</a> 
-            <a href="#" class="social-item">In</a> 
-        </div>
         
         <a href="#" class="logo">
             <img src="img/SC_logo_vert.svg"  alt="">
         </a>
         
         <div class="headerMenu">
-            <a href="forms" class="social-item">Організаторам</a>
+            <a href="#" class="socialItem">ОРГАНІЗАТОРАМ</a>
         </div>
     </header> 
 
