--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                     <!-- <div class="about-sponsor">Borika</div> -->
                 </a>
             </div> 
+            <div class="sponsorItem ordana">
+                <a href="">
+                    <img src="img/sponsors/mob/mob-ordana.png" alt="">
+                    <!-- <div class="about-sponsor">Borika</div> -->
+                </a>
+            </div> 
         </section> 
     <!-- end SPONSOR section -->
 
