--- a/eventPage.html
+++ b/eventPage.html
@@ -40,10 +40,15 @@
             <ul class="headerMenu">
                 <li><a href="#" class="social-item calendar">календар подій</a></li>
                 <li><a href="#" class="social-item">календар турів</a></li>
-                <li><a href="#" class="social-item">інше</a></li>
+                <li>
+                    <a href="#" class="social-item anotheHeaderItem">інше</a>
+                    <a href="#" class="social-item anotheHeaderIcon">
+                        <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><g><g><g><circle cx="256" cy="256" r="64"/><circle cx="256" cy="448" r="64"/><circle cx="256" cy="64" r="64"/></g></g></g></svg>
+                    </a>
+                </li>
             </ul>  
         </div>                
-    </header>    
+    </header>   
 
     <main>
         <!--EVENT SECTION-->
@@ -51,7 +56,7 @@
             <h1 class="bg-title">Скоро ми наповнимо сторінки подіями, <br> а поки чарівна фоточка від Євгена Палія з Ізмаїла</h1>
             <img class="bg-photo" src="img/pics/izmailPhoto.jpg" alt="kayaking">
             <!--LIST CONTENT-->
-            <div class="listContent">  
+            <div class="listContent listContentEventPage">  
                 <!--HEADER EventPage SECTION-->
                 <section class="headerEventPage">
                         <!--PHOTO EventPage -->
